@@ -1,5 +1,14 @@
+//
+//  UnitTests - BaseMatcherTest.m
+//  Copyright 2009 www.hamcrest.org. See LICENSE.txt
+//
+//  Created by: Jon Reid
+//
+
+    // Inherited
 #import "AbstractMatcherTest.h"
 
+    // OCHamcrest
 #import <OCHamcrest/HCBaseMatcher.h>
 #import <OCHamcrest/HCDescription.h>
 
