@@ -1,5 +1,14 @@
+//
+//  UnitTests - AnyOfTest.m
+//  Copyright 2009 www.hamcrest.org. See LICENSE.txt
+//
+//  Created by: Jon Reid
+//
+
+    // Inherited
 #import "AbstractMatcherTest.h"
 
+    // OCHamcrest
 #define HC_SHORTHAND
 #import <OCHamcrest/HCAnyOf.h>
 #import <OCHamcrest/HCIsEqual.h>
